<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Everything becomes possible</string>
    <string name="app_name">Mind-gamez</string>
    <string name="seriesGameBtnTxt">Series Game</string>
    <string name="scoreBtnTxt">Score board</string>
    <string name="startOverBtnTxt">Start Over</string>
    <string name="showNextBtnTxt">Show Next</string>
    <string name="mathGameBtnTxt">Math Game</string>
    <string name="memoryGameBtnTxt">Memory Game</string>
    <string name="GoSeriesGameBtnTxt">Go</string>
    <string name="descriptionGameViewTxt">Description OF the game:</string>
    <string name="toast_selected_number_series"> of series was selected</string>
    
    <string name="dataLbl"></string>
    <string name="about">About</string>
    <string name="sound">Sound</string>
    <string name="series_vector">(...)</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_show_game">ShowGame</string>
    <string name="hint_message"></string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_math_game">MathGame</string>
    <string name="app_title">title</string>
    <string name="detail_log_file"></string>
    <string name="detail_log_id"></string>
    <string name="detail_message"></string>
    <string name="detail_priority"></string>
    <string name="detail_priority_name"></string>
    <string name="detail_timestamp"></string>
    
    <!--  text on the numeric keyborad buttons -->
    <string name="num_btn_1_txt">1</string>
    <string name="num_btn_2_txt">2</string>
    <string name="num_btn_3_txt">3</string>
    <string name="num_btn_4_txt">4</string>
    <string name="num_btn_5_txt">5</string>
    <string name="num_btn_6_txt">6</string>
    <string name="num_btn_7_txt">7</string>
    <string name="num_btn_8_txt">8</string>
    <string name="num_btn_9_txt">9</string>
    <string name="num_btn_0_txt">0</string>

    <style name="TitleText">titletext</style>

    <string name="title_activity_memory_game">MemoryGame</string>
    <string name="textSizeForResults">60</string>
    <string name="textSizeForDescription">70</string>
    <string name="x">X</string>

</resources>