<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hello" />

    <Button
        android:id="@+id/startBtn"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:text="@string/startBtnTxt"
        android:onClick="startGame" />

    <Button
        android:id="@+id/scoreBtn"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:text="@string/scoreBtnTxt" />

    <TextView
        android:id="@+id/edit_message"
        android:hint="@string/hint_message"
        android:layout_height="50dip"
        android:layout_width="match_parent" />
    
    <TextView
        android:id="@+id/mainView"
        android:layout_width="371dip"
        android:layout_height="0dip"
        android:layout_weight="0.09"
        android:text="@string/dataLbl"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    
</LinearLayout>