<!--?xml version="1.0" encoding="utf-8"?-->
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:orientation="vertical" >
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="35dip"
			android:background="@drawable/header"
			android:orientation="horizontal"
			android:padding="0dip" >
		<TextView
		android:id="@+id/apptitle"
		style="@style/TitleText"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_vertical"
		android:layout_marginLeft="5dip"
		android:padding="0dip"
		android:text="@string/app_title" />
	</LinearLayout>
	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="@color/backgroundGrey" >
<TableLayout
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:background="@color/backgroundGrey"
	android:padding="15dip"
	android:stretchColumns="1" >
	<TableRow
		android:layout_marginBottom="0dip"
		android:background="@drawable/multitext_top" >
	<TextView
		style="@style/BoldText"
		android:padding="7dip"
		android:text="@string/detail_log_file" />
	</TableRow>
	<TableRow
		android:layout_marginBottom="10dip"
		android:background="@drawable/multitext_bottom" >
		<TextView
			android:id="@+id/log_file"
			style="@style/DetailRightText"
			android:layout_width="0dip"
			android:layout_span="2"
			android:gravity="right"
			android:padding="7dip" />
	</TableRow>
	<TableRow
		android:layout_marginBottom="10dip"
		android:background="@drawable/rounded_edittext" >
		<TextView
			style="@style/BoldText"
			android:padding="7dip"
			android:text="@string/detail_log_id" />
		<TextView
			android:id="@+id/log_id"
			style="@style/DetailRightText"
			android:gravity="right"
			android:padding="7dip"
			android:singleLine="true" />
	</TableRow>
<TableRow android:background="@drawable/multitext_top" >
<TextView
style="@style/BoldText"
android:layout_span="2"
android:padding="7dip"
android:text="@string/detail_message" />
</TableRow>
<TableRow
android:layout_marginBottom="10dip"
android:background="@drawable/multitext_bottom" >
<TextView
android:id="@+id/log_message"
style="@style/DetailMessageText"
android:layout_span="2"
android:layout_weight="1"
android:padding="7dip" />
</TableRow>
<TableRow
android:layout_marginBottom="10dip"
android:background="@drawable/rounded_edittext" >
<TextView
style="@style/BoldText"
android:padding="7dip"
android:text="@string/detail_priority" />
<TextView
android:id="@+id/log_priority"
style="@style/DetailRightText"
android:gravity="right"
android:padding="7dip"
android:singleLine="true" />
</TableRow>
<TableRow
android:layout_marginBottom="10dip"
android:background="@drawable/rounded_edittext" >
<TextView
style="@style/BoldText"
android:padding="7dip"
android:text="@string/detail_priority_name" />
<TextView
android:id="@+id/log_priority_name"
style="@style/DetailRightText"
android:gravity="right"
android:padding="7dip"
android:singleLine="true" />
</TableRow>
<TableRow
android:layout_marginBottom="0dip"
android:background="@drawable/multitext_top" >
<TextView
style="@style/BoldText"
android:padding="7dip"
android:text="@string/detail_timestamp" />
</TableRow>
<TableRow
android:layout_marginBottom="10dip"
android:background="@drawable/multitext_bottom" >
<TextView
android:id="@+id/log_timestamp"
style="@style/DetailMessageText"
android:layout_span="2"
android:layout_weight="1"
android:padding="7dip" />
</TableRow>
</TableLayout>
</ScrollView>
</LinearLayout>