<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".ShowGame" >

    <Spinner
        android:id="@+id/chooseSeriesNumberSpnr"
        android:layout_width="match_parent"
        android:layout_height="50dip" />

    <Button
        android:id="@+id/GoSeriesGameBtn"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:onClick="goSeriesGame"
        android:text="@string/GoSeriesGameBtnTxt" />

    <Button
        android:id="@+id/startOverBtn"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:onClick="startOver"
        android:text="@string/startOverBtnTxt"
        android:visibility="gone" />

    <TextView
        android:id="@+id/mainGameView"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        android:gravity="center_horizontal"
        android:text="@string/series_vector"
        android:visibility="gone" />

    <GridLayout
        android:id="@+id/resultGridLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="9"
        android:rowCount="1"
        android:orientation="horizontal" >

 <!--       <TextView
            android:id="@+id/L1"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/x"
            android:textSize="@string/textSizeForResults"
            android:visibility="gone" />

        <TextView
            android:id="@+id/L2"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/x"
            android:textSize="@string/textSizeForResults"
            android:visibility="gone" />

        <TextView
            android:id="@+id/L3"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/x"
            android:textSize="@string/textSizeForResults"
            android:visibility="gone" />

        <TextView
            android:id="@+id/L4"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/x"
            android:textSize="@string/textSizeForResults"
            android:visibility="gone" />

        <TextView
            android:id="@+id/L5"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/x"
            android:textSize="@string/textSizeForResults"
            android:visibility="gone" />

        <TextView
            android:id="@+id/L6"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/x"
            android:textSize="@string/textSizeForResults"
            android:visibility="gone" />

        <TextView
            android:id="@+id/L7"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/x"
            android:textSize="@string/textSizeForResults"
            android:visibility="gone" />

        <TextView
            android:id="@+id/L8"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/x"
            android:textSize="@string/textSizeForResults"
            android:visibility="gone" />

        <TextView
            android:id="@+id/L9"
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:text="@string/x"
            android:textSize="@string/textSizeForResults"
            android:visibility="gone" />  -->
    </GridLayout>

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:columnCount="3"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bk_one"
            android:text="1"
            android:visibility="gone" />

        <Button
            android:id="@+id/bk_two"
            android:text="2"
            android:visibility="gone" />

        <Button
            android:id="@+id/bk_three"
            android:text="3"
            android:visibility="gone" />

        <Button
            android:id="@+id/bk_four"
            android:text="4"
            android:visibility="gone" />

        <Button
            android:id="@+id/bk_five"
            android:text="5"
            android:visibility="gone" />

        <Button
            android:id="@+id/bk_six"
            android:text="6"
            android:visibility="gone" />

        <Button
            android:id="@+id/bk_seven"
            android:text="7"
            android:visibility="gone" />

        <Button
            android:id="@+id/bk_eight"
            android:text="8"
            android:visibility="gone" />

        <Button
            android:id="@+id/bk_nine"
            android:text="9"
            android:visibility="gone" />

        <Button
            android:id="@+id/bk_zero"
            android:layout_gravity="fill"
            android:layout_rowSpan="3"
            android:text="0"
            android:visibility="gone" />
    </GridLayout>

    <Button
        android:id="@+id/showNextBtn"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:onClick="showNext"
        android:text="@string/showNextBtnTxt"
        android:visibility="gone" />

    <TextView
        android:id="@+id/descriptionGameView"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center_horizontal"
        android:text="@string/descriptionGameViewTxt"
        android:visibility="gone" />

</LinearLayout>